# backTester

./: .gitignore  CMakeLists.txt  README.md  backtestEngine.puml  backtestEngineSequence.puml  classDiagram.puml  classDiagram.uxf  config.json  new.uxf  sequenceDiagram.uxf
configs/: meanReversion.json
documentation/: backtestEngineSequence.puml
include/: AlphaVantageFeed.h  BacktestEngine.h  DataFeed_I.hpp  ExecutionEngine_I.h  ExecutionEngine_I.hpp  IExecutionEngine.h  IMarketDataFeed.h  ITradingStrategy.h  MarketDataFeed_I.h  Metrics.h  Portfolio.h  StrategyFactory.h  StrategyFactory.hpp  Strategy_I.hpp  TradingStrategy_I.h  TradingTypes.hpp  Types.h
include/feed/: AlphaVantageFeed.hpp
newDesign/: .clang-tidy  CMakeLists.txt  config.json
newDesign/include/: BacktestEngine.hpp  DataFeed_I.hpp  ExecutionEngine_I.hpp  Metrics.hpp  Portfolio.hpp  Strategy_I.hpp  TradingTypes.hpp
newDesign/include/exec/: SimpleExecutionEngine.hpp
newDesign/include/feed/: AlphaVantageFeed.hpp
newDesign/src/: BacktestEngine.cpp  Metrics.cpp  Portfolio.cpp  StrategyFactory.cpp  main.cpp
newDesign/src/exec/: SimpleExecutionEngine.cpp
newDesign/src/feed/: AlphaVantageFeed.cpp
newDesign/src/strategies/: BreakoutStrategy.cpp  SmaCrossoverStrategy.cpp  TrendRsiStrategy.cpp
src/: AlphaVantageFeed.cpp  BacktestEngine.cpp  BreakoutStrategy.cpp  Metrics.cpp  Portfolio.cpp  RsiReversionStrategy.cpp  SimpleExecutionEngine.cpp  SimpleSMAStrategy.cpp  SmaCrossoverStrategy.cpp  StrategyFactory.cpp  TrendRsiStrategy.cpp  VectorMarketDataFeed.cpp  main.cpp
src/strategies/: MyNewStrategy.cpp  SmaCrossoverStrategy.cpp  TrendRsiStrategy.cpp  ZscoreMeanReversion.cpp
src/strategy/: BreakoutStrategy.cpp  RsiReversionStrategy.cpp  SimpleSMAStrategy.cpp  SmaCrossoverStrategy.cpp  TrendRsiStrategy.cpp
